--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "aphp/parser",
-	"description": "text of description",
+	"description": "PHP Curl Parser for static websites, easy to send HTTP requests, use proxy",
 	"keywords": [ 
 		"PHP", "curl", "curlphp", "http", "http-client", "http-requests", "browser", "web-scraper", "web-scraping", "proxy"
 	],
