--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
 	"require": {
 		"aphp/logger": "~1.0"
 	},
+	"require-dev": {
+		"aphp/router": "~1.0"
+	},
 	"autoload": {
 		"psr-4": {
 			"aphp\\Parser\\" : "src/"
