--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
 script:
   - wget -O phpunit.phar https://phar.phpunit.de/phpunit-5.phar
   - sh tests/startServer.sh > /dev/null 2>&1 &
+  - sh tests/css-webserver/startServer.sh > /dev/null 2>&1 &
   - php phpunit.phar --bootstrap tests/bootstrap_autoload.php tests
 notifications:
   email: false
