--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 	"license": "MIT",
 	"minimum-stability": "dev",
 	"require": {
-		"psr/log": "~1.0"
+		"psr/log": "~1.0",
+		"aphp/foundation": "~1.0"
 	},
 	"require-dev": {
 		"aphp/router": "~1.0",
